Bad format at all_time_in_state

cpu may be offline and not report freq, the all_time_in_state looks like
this:
freq\t\tcpu0\t\tcpu1\t\tcpu2\t\tcpu3\t\t
126000\t\t1501\t\t1501\t\t
216000\t\t327\t\t327\t\t
408000\t\t86\t\t86\t\t

CpuDataCollector did not include the case like this, thus reports error.
This CL fixes this problem and adds unit test.

BUG=739574
TEST=CpuDataCollectorTest.ReadCpuFreqAllTimeInStateOff

Change-Id: If4bf584a81eac158c38069fa6228cfc79ffb7665
Reviewed-on: https://chromium-review.googlesource.com/564000
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485471}
Former-commit-id: 90fd8c3e191c33de5a342c77d059e9ecdbd80bb4