chrome/browser/chromeos/power/cpu_data_collector_unittest.cc
@@ -16,41 +16,49 @@ using base::TimeDelta;
 namespace chromeos {
 namespace {
 
-// The suffix path of fake cpu frequency file for cpu0.
+// The suffix path of fake CPU frequency file for cpu0.
 constexpr char kTimeInStateSuffixPathCpu0[] = "cpu0/time_in_state";
 
-// The suffix path of fake cpu frequency file for cpu1.
+// The suffix path of fake CPU frequency file for cpu1.
 constexpr char kTimeInStateSuffixPathCpu1[] = "cpu1/time_in_state";
 
-// The suffix path of fake cpu frequency file for all cpus.
+// The suffix path of fake CPU frequency file for all cpus.
 constexpr char kAllTimeInStateSuffixPath[] = "all_time_in_state";
 
-// The string content of the fake cpu frequency file for cpu0.
+// The string content of the fake CPU frequency file for cpu0.
 constexpr char kTimeInStateContentCpu0[] =
     "20000 30000000\n"
     "60000 90000\n"
     "100000 50000\n";
 
-// The string content of the fake cpu frequency file for cpu1.
+// The string content of the fake CPU frequency file for cpu1.
 constexpr char kTimeInStateContentCpu1[] =
     "20000 31000000\n"
     "60000 91000\n"
     "100000 51000\n";
 
-// The string content of the fake cpu frequency file for all cpus.
+// The string content of the fake CPU frequency file for all CPUs.
 constexpr char kAllTimeInStateContent[] =
     "freq\t\tcpu0\t\tcpu1\t\t\n"
     "20000\t\t30000000\t\t31000000\t\t\n"
     "60000\t\t90000\t\t91000\t\t\n"
     "100000\t\t50000\t\t51000\t\t\n";
 
-// The string content of the fake cpu frequency file for all cpus except one
-// that reports "N/A" as the cpu/freq combinations that are invalid.
+// The string content of the fake CPU frequency file for all CPUs except one
+// that reports "N/A" as the CPU/freq combinations that are invalid.
 constexpr char kAllTimeInStateContentNA[] =
     "freq\t\tcpu0\t\tcpu1\t\tcpu2\t\t\n"
     "20000\t\t30000000\t\t31000000\t\tN/A\t\t\n"
     "60000\t\t90000\t\t91000\t\tN/A\t\t\n"
     "100000\t\t50000\t\t51000\t\tN/A\t\t\n";
+
+// The string content of the fake CPU frequency file for all CPUs except one
+// that does not report freq as the CPU is turned off.
+constexpr char kAllTimeInStateContentOff[] =
+    "freq\t\tcpu0\t\tcpu1\t\tcpu2\t\t\n"
+    "20000\t\t30000000\t\t31000000\t\t\n"
+    "60000\t\t90000\t\t91000\t\t\n"
+    "100000\t\t50000\t\t51000\t\t\n";
 
 }  // namespace
 
@@ -78,7 +86,7 @@ class CpuDataCollectorTest : public testing::Test {
   }
 
  protected:
-  // Expected cpu frequency state names after calling |ReadCpuFreqTimeInState|
+  // Expected CPU frequency state names after calling |ReadCpuFreqTimeInState|
   // or |ReadCpuFreqAllTimeInState|
   const std::vector<std::string> kExpectedCpuFreqStateNames;
 
@@ -133,7 +141,7 @@ TEST_F(CpuDataCollectorTest, ReadCpuFreqAllTimeInState) {
   std::vector<CpuDataCollector::StateOccupancySample> freq_samples;
   CpuDataCollector::StateOccupancySample freq_sample_cpu0;
   CpuDataCollector::StateOccupancySample freq_sample_cpu1;
-  // |ReadCpuFreqAllTimeInState| only completes sample for cpu that is online.
+  // |ReadCpuFreqAllTimeInState| only collects samples for CPUs that are online.
   freq_sample_cpu0.cpu_online = true;
   freq_sample_cpu1.cpu_online = true;
   freq_samples.push_back(freq_sample_cpu0);
@@ -157,7 +165,7 @@ TEST_F(CpuDataCollectorTest, ReadCpuFreqAllTimeInStateNA) {
   CpuDataCollector::StateOccupancySample freq_sample_cpu0;
   CpuDataCollector::StateOccupancySample freq_sample_cpu1;
   CpuDataCollector::StateOccupancySample freq_sample_cpu2;
-  // |ReadCpuFreqAllTimeInState| only completes sample for cpu that is online.
+  // |ReadCpuFreqAllTimeInState| only collects samples for CPUs that are online.
   freq_sample_cpu0.cpu_online = true;
   freq_sample_cpu1.cpu_online = true;
   freq_sample_cpu2.cpu_online = true;
@@ -167,6 +175,33 @@ TEST_F(CpuDataCollectorTest, ReadCpuFreqAllTimeInStateNA) {
 
   CpuDataCollector::ReadCpuFreqAllTimeInState(
       3, all_time_in_state_path_, &cpu_freq_state_names, &freq_samples);
+  EXPECT_EQ(kExpectedCpuFreqStateNames, cpu_freq_state_names);
+  EXPECT_EQ(kExpectedTimeInStateCpu0, freq_samples[0].time_in_state);
+  EXPECT_EQ(kExpectedTimeInStateCpu1, freq_samples[1].time_in_state);
+  EXPECT_TRUE(freq_samples[2].time_in_state.empty());
+}
+
+TEST_F(CpuDataCollectorTest, ReadCpuFreqAllTimeInStateOff) {
+  ASSERT_TRUE(base::CreateTemporaryFile(&all_time_in_state_path_));
+  ASSERT_TRUE(base::WriteFile(
+                  all_time_in_state_path_, kAllTimeInStateContentOff,
+                  static_cast<int>(strlen(kAllTimeInStateContentOff))) != -1);
+
+  std::vector<std::string> cpu_freq_state_names;
+  std::vector<CpuDataCollector::StateOccupancySample> freq_samples;
+  CpuDataCollector::StateOccupancySample freq_sample_cpu0;
+  CpuDataCollector::StateOccupancySample freq_sample_cpu1;
+  CpuDataCollector::StateOccupancySample freq_sample_cpu2;
+  // |ReadCpuFreqAllTimeInState| only collects samples for CPUs that are online.
+  freq_sample_cpu0.cpu_online = true;
+  freq_sample_cpu1.cpu_online = true;
+  freq_sample_cpu2.cpu_online = false;
+  freq_samples.push_back(freq_sample_cpu0);
+  freq_samples.push_back(freq_sample_cpu1);
+  freq_samples.push_back(freq_sample_cpu2);
+
+  CpuDataCollector::ReadCpuFreqAllTimeInState(
+      2, all_time_in_state_path_, &cpu_freq_state_names, &freq_samples);
   EXPECT_EQ(kExpectedCpuFreqStateNames, cpu_freq_state_names);
   EXPECT_EQ(kExpectedTimeInStateCpu0, freq_samples[0].time_in_state);
   EXPECT_EQ(kExpectedTimeInStateCpu1, freq_samples[1].time_in_state);
